[package]
name = "screenshock"
description = "A basic implementation of a screenshot utility for Linux computers running the X display server"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/foofrog/screenshock"
keywords = ["x11", "xcb", "cli", "linux", "utility"]
categories = ["utility"]
authors = ["foofrog <foobarbazqux@skiff.com>"]

[profile.release]
opt-level = 3
debug = false

[[bin]]
name = "screenshock"
path = "src/main.rs"

[dependencies]
chrono = "0.4.31"
image = "0.24.7"
xcb = "1.2.2"
